<resources>
    <string name="app_name">AndroidExploits</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Welcome</string>
    <string name="second_fragment_label">Data privacy policy</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="device_info_label">Device Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_device_report_text">GET DEVICE SECURITY REPORT</string>
    <string name="request_device_report_label">REQUEST DEVICE SECURITY REPORT</string>
    <string name="action_show_device_information">Show Device Information</string>
    <string name="report_overview_label">Report Overview</string>
    <string name="report_status_network_error">Network error. Please try again later!</string>
    <string name="drag_here">Drag here</string>
    <string name="report_overview_fix_buttontext">CHECK FOR SYSTEM UPDATE</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="accept">Accept</string>
    <string name="welcome_text">Welcome to AndroidExploits.\n\nThis app will collect data of your device and create a score about the security.</string>
    <string name="data_policy">We will collect the following Data in order to test ur device:\n\nHardware informaion\n\nInstalled app\'s with potential risky permissions\n\nA generated certificate including the devices default certificates\n\nThe list of supported and unsupported hardware features.\n\nA detailed list of included information can be found by a click on the (i) button.\n\n\nAll data will be uploaded anonymously and cannot be addressed to you.</string>
    <string name="report_status_sending">sending request</string>
    <string name="incidence_fragment_label">Incidence</string>
    <string name="action_show_about">ABOUT</string>
    <string name="action_show_data_privacy_policy_label">DATA PRIVACY POLICY</string>
    <string name="url_data_privacy_policy">https://androidreverse.org/datenschutzerklaerung/</string>
    <string name="url_about">https://androidreverse.org/about/</string>
    <string name="report_card_overview_fragment_title">Overview</string>
    <string name="incidences_item_label_text">INCIDENCES</string>
    <string name="my_device_score_item_label_text">SCORE</string>
    <string name="action_show_overview">Overview</string>
    <string name="action_show_manufactureres_label">Manufactureres</string>
    <string name="action_show_androidversions_label">Android Versions</string>
    <string name="action_show_devicemodels_label">Devices</string>
    <string name="action_show_securitypatches_label">Security patch levels</string>
    <string name="action_show_incidences_label">Incidences</string>
    <string name="action_show_properties_label">Hardware Features</string>
    <string name="score_history_label">Score History</string>
</resources>