<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.chickenhook.androidexploits.MainActivity">

    <item
        android:id="@+id/action_show_overview"
        android:orderInCategory="200"
        android:icon="@drawable/smartphone"
        android:title="@string/action_show_overview"
         />
    <item android:title="@string/global"
        android:menuCategory="container">
        <menu>
            <item
                android:id="@+id/action_show_manufacturers"
                android:orderInCategory="100"
                android:title="@string/action_show_manufactureres_label"
                android:icon="@drawable/factory"/>
            <item
                android:id="@+id/action_show_androidversions"
                android:orderInCategory="100"
                android:title="@string/action_show_androidversions_label"
                android:icon="@drawable/system_update"/>
            <item
                android:id="@+id/action_show_devicemodels"
                android:orderInCategory="100"
                android:title="@string/action_show_devicemodels_label"
                android:icon="@drawable/phone_android"/>
            <item
                android:id="@+id/action_show_securitypatches"
                android:orderInCategory="100"
                android:title="@string/action_show_securitypatches_label"
                android:icon="@drawable/security_update_good"/>
            <item
                android:id="@+id/action_show_incidences"
                android:orderInCategory="100"
                android:title="@string/action_show_incidences_label"
                android:icon="@drawable/security_update_warning" />
            <item
                android:id="@+id/action_show_properties"
                android:orderInCategory="100"
                android:title="@string/action_show_properties_label"
                android:icon="@drawable/format_list_bulleted"/>
            <item
                android:id="@+id/action_show_webviews"
                android:orderInCategory="100"
                android:title="@string/action_show_webview_label"
                android:icon="@drawable/web"/>
        </menu>
    </item>
</menu>