<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/RequestDeviceReportFragment">
    <action
        android:id="@+id/action_show_DeviceInfo"
        app:destination="@id/DeviceInfoFragment" />
    <action
        android:id="@+id/action_show_ReportOverview"
        app:destination="@id/ReportOverviewFragment" />
    <fragment
        android:id="@+id/RequestDeviceReportFragment"
        android:name="org.chickenhook.androidexploits.RequestDeviceReportFragment"
        android:label="@string/request_device_report_label"
        tools:layout="@layout/fragment_request_device_report">

        <action
            android:id="@+id/action_send_device_report"
            app:destination="@id/DeviceInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/DeviceInfoFragment"
        android:name="org.chickenhook.androidexploits.DeviceInfoFragment"
        android:label="@string/device_info_label"
        tools:layout="@layout/fragment_device_info">


    </fragment>
    <fragment
        android:id="@+id/ReportOverviewFragment"
        android:name="org.chickenhook.androidexploits.ReportOverviewFragment"
        android:label="@string/report_overview_label"
        tools:layout="@layout/fragment_report_overview">


    </fragment>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="org.chickenhook.androidexploits.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="org.chickenhook.androidexploits.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>